# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

load(
    "//:build_defs.bzl",
    "mozc_cc_library",
    "mozc_cc_test",
)

package(default_visibility = ["//visibility:private"])

mozc_cc_library(
    name = "conversion_request",
    hdrs = ["conversion_request.h"],
    visibility = [
        "//:__subpackages__",
        "//converter:__pkg__",
        "//dictionary:__subpackages__",
        "//engine:__pkg__",
        "//prediction:__pkg__",
        "//rewriter:__pkg__",
    ],
    deps = [
        "//base:util",
        "//base/strings:assign",
        "//composer",
        "//config:config_handler",
        "//converter:segments",  # TODO(b/409183257): Remove the dependency to segments.
        "//prediction:result",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_test(
    name = "conversion_request_test",
    srcs = ["conversion_request_test.cc"],
    deps = [
        ":conversion_request",
        "//composer",
        "//composer:table",
        "//converter:segments",
        "//prediction:result",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit_main",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "request_util",
    hdrs = ["request_util.h"],
    visibility = [
        "//:__subpackages__",
        "//converter:__pkg__",
        "//prediction:__pkg__",
        "//rewriter:__pkg__",
    ],
    deps = [
        ":conversion_request",
        "//composer",
        "//protocol:commands_cc_proto",
    ],
)

mozc_cc_library(
    name = "request_test_util",
    testonly = 1,
    srcs = ["request_test_util.cc"],
    hdrs = ["request_test_util.h"],
    visibility = [
        "//:__subpackages__",
        "//converter:__pkg__",
        "//engine:__pkg__",
        "//prediction:__pkg__",
        "//rewriter:__pkg__",
        "//session:__pkg__",
    ],
    deps = [
        "//protocol:commands_cc_proto",
    ],
)

mozc_cc_test(
    name = "request_test_util_test",
    srcs = ["request_test_util_test.cc"],
    deps = [
        ":request_test_util",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
    ],
)
